# mcp-agent-bridge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  config.example.yaml  pyproject.toml
bridge/: __init__.py  __main__.py  config.py  memory.py  openclaw_runner.py  server.py
bridge/tools/: __init__.py  hermes_chat.py  hermes_messaging.py  oc_image.py  oc_tts.py  oc_web.py  shared_memory.py
